[package]
edition = "2021"
name = "demo-esp32c6"
version = "0.1.0"

[[bin]]
name = "demo-esp32c6"
path = "./src/bin/main.rs"

[dependencies]
esp32_ws2812b = { path = "../../../esp32-ws2812b", features = ["esp32c6"] }
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
  "esp32c6",
  "log-04",
  "unstable",
] }
log = "0.4.27"

critical-section = "1.2.0"
esp-backtrace = { version = "0.16.0", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.14.0", features = ["esp32c6", "log-04"] }
smart-leds = "0.4.0"
smart-leds-trait = "0.3.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
